###############################################################################
# Install
###############################################################################

install(
  FILES
    find_lane.h
    types.h
  DESTINATION
    ${INCLUDE_INSTALL_DIR}/${PROJECT_NAME}${PROJECT_MAJOR_VERSION}/${PROJECT_NAME}/maliput
)
